@@ -1,3 +1,10 @@
+2005-02-21  Paolo Borelli  <pborelli@katamail.com>
+
+	* GNOME_Gedit.idl:
+	* gedit-document-server.c:
+	* gedit-window-server.c (impl_gedit_window_server_openURIList): pass
+	the encoding specified on the command line.
+
 2005-02-21  Paolo Maggi  <paolo@gnome.org>
 
 	Fixes bug #167874: Specify the line number on the command line is broken
